# jada

./: Cargo.toml  DesignDocument.md  README.md  db.sql  sample.data  users.yaml
data/: basic_foods.yaml  composite_foods.yaml
data/logs/: Anirudh Sankar_logs.yaml
src/: daily_log.rs  food_database.rs  food_log.rs  main.rs  user_profile.rs
