[package]
name = "yada"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.10.2"